# adventofcode

./: .gitignore  CMakeLists.txt  main.cpp
2022/: CMakeLists.txt  main.cpp
2022/include/: advent.h  crt.h  fs.h  monkeys.h  utils.h
2022/src/: advent.cpp  boulders.cpp  crt.cpp  fs.cpp  grid.cpp  hill.cpp  knots.cpp  monkeys.cpp  utils.cpp
2023/: CMakeLists.txt  main.cpp
2023/include/: day1.h  day10.h  day11.h  day13.h  day14.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  file.h  func.h  math.h  maths.h  range_map.h  str.h  unordered_range_map.h
2023/src/: day1.cpp  day10.cpp  day11.cpp  day13.cpp  day14.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  file.cpp  math.cpp  maths.cpp  str.cpp
include/: advent.h  boulders.h  fs.h  grid.h  hill.h  knots.h  point.h  utils.h
src/: advent.cpp  boulders.cpp  crt.cpp  fs.cpp  grid.cpp  hill.cpp  knots.cpp  utils.cpp
